# aoc-2020

./: .gitignore  Cargo.toml  README.md
days/dec1/: Cargo.toml
days/dec1/src/test/: mod.rs
days/dec10/: Cargo.toml
days/dec10/src/: lib.rs
days/dec10/src/test/: mod.rs
days/dec10/test/: mod.rs
days/dec11/: Cargo.toml  lib.rs
days/dec11/test/: mod.rs
days/dec12/: Cargo.toml  lib.rs
days/dec12/src/: lib.rs
days/dec13/: Cargo.toml
days/dec13/src/: lib.rs
days/dec14/: Cargo.toml
days/dec14/benches/: part_b.rs
days/dec14/src/: lib.rs
days/dec14/src/test/: mod.rs
days/dec15/: Cargo.toml
days/dec15/src/: lib.rs  test.rs
days/dec16/: Cargo.toml
days/dec16/src/: lib.rs  test.rs
days/dec18/: Cargo.toml
days/dec18/src/: lib.rs  test.rs
days/dec2/: Cargo.toml
days/dec22/: Cargo.toml
days/dec22/src/: lib.rs  test.rs
days/dec3/: dec3.py
days/dec4/: dec4.py
days/dec5/: dec5.py
days/dec6/: dec6.py
days/dec7/: Cargo.toml  lib.rs
days/dec7/test/: mod.rs
days/dec8/: Cargo.toml
days/dec8/src/: lib.rs
days/dec9/: Cargo.toml
days/dec9/src/: lib.rs
days/dec9/test/: mod.rs
src/: main.rs
src/dec1/: mod.rs
src/dec1/test/: mod.rs
src/dec10/: mod.rs
src/dec11/: mod.rs
src/dec11/test/: mod.rs
src/dec12/test/: mod.rs
src/dec2/: mod.rs
src/dec2/test/: mod.rs
src/dec4/: dec4.py
src/dec5/: dec5.py
src/dec6/: dec6.py
src/dec7/: mod.rs
src/dec7/test/: mod.rs
src/dec8/test/: mod.rs
src/dec9/: mod.rs
src/dec9/test/: mod.rs
src/utils/: mod.rs
utils/: Cargo.toml
utils/src/: lib.rs
(+8 files in other folders)
