[package]
name = "dec14"
version = "0.1.0"
authors = ["Denys Vitali <denys@denv.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
ansi_term = "0.12.1"
utils = { path = "../../utils/" }
itertools = "0.9.0"
bencher = "0.1.5"

[[bench]]
name = "part_b"
harness = false